--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             <a href="{% url 'register' %}" class="btn btn-cyber btn-lg">
                 <i class="bi bi-person-plus me-2"></i>JOIN US
             </a>
-            <a href="#events" class="btn btn-outline-cyber btn-lg">
+            <a href="{% url 'events' %}" class="btn btn-outline-cyber btn-lg">
                 <i class="bi bi-calendar-event me-2"></i>VIEW EVENTS
             </a>
         </div>
